miniextendr-macros/tests/ui/non_into_r_return.stderr
error[E0277]: the trait bound `NotIntoR: IntoR` is not satisfied
 --> tests/ui/non_into_r_return.rs:7:1
  |
7 | #[miniextendr]
  | ^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `IntoExternalPtr` is not implemented for `NotIntoR`
 --> tests/ui/non_into_r_return.rs:5:1
  |
5 | struct NotIntoR;
  | ^^^^^^^^^^^^^^^
  = help: the following other types implement trait `IntoR`:
            &OsStr
            &Path
            &[&str]
            &[T]
            &[bool]
            &[f32]
            &[i16]
            &[i8]
          and $N others
  = note: required for `NotIntoR` to implement `IntoR`
  = note: this error originates in the attribute macro `miniextendr` (in Nightly builds, run with -Z macro-backtrace for more info)
